# logistics-workflow

./: .dockerignore  .env.production  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  build.rs  config.toml.example  deploy.sh  docker-compose.yml  env.example  logistics-workflow.desktop  nginx-ssl.conf.template  nginx.conf  run.sh  workbook1.xlsx
.hermes/: competitive-analysis.md  e2e-test-report-20260701-2226.md  e2e-test-report-20260701-2228.md  e2e-test-report-20260702-0019.md  export-process-gap-analysis.md  plan.md  shipping-call-business-process.md  shipping-call-frontend-flow.md  spec-webui.md  spec.md  test-plan-report.md  test-plan.md  test-report.md
.hermes/plans/: 2026-07-02_080751-production-release.md
db-backup/: 01-seed-users.sql
migrations/: 001_shipping_calls.sql
qml/: AppData.qml  CalendarPopup.qml  DashboardTab.qml  MainWindow.qml  ShipmentSidebar.qml  Step1Create.qml  Step2Draft.qml  Step3Customs.qml  Step4Checklist.qml  Theme.qml  WorkflowProgress.qml  qmldir
resources/: qml.qrc
scripts/: e2e_test.py
src/: bridge.rs  config.rs  lib.rs  main.rs
src/db/: mod.rs  queries.rs  schema.rs  seed.rs
tests/: auth_tests.rs  batch_tests.rs  db_tests.rs  delete_tests.rs  pagination_tests.rs  update_tests.rs
web/: index.html  package-lock.json  package.json  vitest.config.ts
web/src/: App.vue  main.ts
web/src/__tests__/: api-client.test.ts  auth-store.test.ts  dashboard-store.test.ts  format.test.ts  header.test.ts  sidebar.test.ts  smoke.test.ts  step-forms.test.ts
web/src/api/: client.ts
web/src/router/: index.ts
(+28 files in other folders)
