[package]
name = "logistics-workflow"
version = "0.3.0"
edition = "2021"
description = "Logistics workflow — web UI + optional Qt6 desktop"
authors = ["Bright Ng"]
license = "MIT"

[features]
default = []
gui = ["cxx-qt", "cxx-qt-lib", "cxx-qt-build"]

[dependencies]
cxx-qt = { version = "0.6", optional = true }
cxx-qt-lib = { version = "0.6", optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "migrate",
    "bigdecimal",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.80"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
toml = "0.8"
bigdecimal = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[build-dependencies]
cxx-qt-build = { version = "0.6", optional = true }
